z-index problem solved

--- a/style/download.css
+++ b/style/download.css
@@ -164,7 +164,7 @@ div.menu li ul {
 	top:35px;
 	right:0;
 	border-top:3px solid transparent;
-	z-index:1;
+	z-index:9999;
 }
 div.menu li:hover ul {
 	display:block;
